# Eat-My-Bubbles

./: .gitignore  CLAUDE.md  pyproject.toml
agents/: data_collector.md  data_quality.md  improver.md  researcher.md
docs/: process-and-context.md
docs/superpowers/plans/: 2026-03-22-pwa-prototype.md
docs/superpowers/specs/: 2026-03-22-eat-my-bubbles-pwa-design.md
scripts/: add_tiered_storage.sql  setup_supabase.sql
src/: config.py  runner.py
src/analysis/: prototype.py
src/database/: client.py  models.py  operations.py
src/processors/: conversions.py  events.py  swimmers.py  times.py
src/scrapers/: base.py  hytek_web.py
tests/: test_processors.py  test_scrapers.py
tests/fixtures/: sample_hytek_event1.html  sample_hytek_event2.html  sample_hytek_index.html  sample_hytek_results.html
web/: package-lock.json  package.json
web/public/: manifest.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/analysis/: page.tsx
web/src/app/api/chat/: route.ts
web/src/app/chat/: page.tsx
web/src/app/events/: page.tsx
web/src/app/events/[slug]/: page.tsx
web/src/app/import/: page.tsx
web/src/app/profile/: page.tsx
web/src/components/: ChatMessage.tsx  EventCard.tsx  NavBar.tsx  PBTable.tsx  TrajectoryChart.tsx
web/src/data/: noa-results.ts  seed-data.ts
web/src/lib/: analytics.ts  swim-utils.ts  swimmer-data.ts  swimrankings-parser.ts  types.ts
